# AEDS3

./: .gitignore
alg/heap/src/: heap.c  heap.h  teste1.c
alg/proc/: main.c  proc.c  proc.h
pa1/: CMakeLists.txt
pa2/: CMakeLists.txt
pa2/src/: CMakeLists.txt  Main.c
pa3/: CMakeLists.txt
pa3/src/: Alt.c  CMakeLists.txt  Main.c
pa4/: CMakeLists.txt
pa4/src/: CMakeLists.txt  Main.c
pa6/: main.c
pa7/: main.c
pa8/: extra.i  main.c
pax1/: CMakeLists.txt
pax1/src/: CMakeLists.txt  Main.c
pax2/: 1271.c  1271www.c  1271x.c  1271y.c  1271z.c  profiling.txt  teste.c
pax3/: main.c
pax4/: main.c
teste_tutorial/src/: CMakeLists.txt  Main.c  Main.rar
tp0/: .gitignore  CMakeLists.txt
tp0/src/: CMakeLists.txt  main.c  makefile  test1.c  treap.c  treap.h
tp0/tools/: testgen.py  testgen_insertonly.py
tp1/: .gitignore  CMakeLists.txt  msort.c
tp1/documentação/: doc.tex
tp1/src/: CMakeLists.txt  attack.c  attack.h  extern.h  heap.c  heap.h  main.c  makefile  msort.c  msort.h  parser.c  parser.h  sorting.c  sorting.h  unpacker.c
tp1/tools/: testgen.py
tp2/: CMakeLists.txt
tp2/doc/: doc.tex
tp2/src/: CMakeLists.txt  amgraph.c  amgraph.h  main.c  mst.c  mst.h  stack.c  stack.h  tsp.c  tsp.h
tp3/: CMakeLists.txt
tp3/doc/: doc.aux  doc.tex
tp3/src/: CMakeLists.txt  main.c  queue.c  queue.h  solver.h  solver_bf.c  solver_bf_p.c  solver_dp.c  solver_dp_p.c
